--- a/package.json
+++ b/package.json
@@ -10,14 +10,18 @@
   "author": "",
   "license": "ISC",
   "devDependencies": {
+    "@types/express": "^4.17.13",
+    "@types/morgan": "^1.9.3",
     "typescript": "^4.6.3"
   },
   "dependencies": {
     "@typegoose/typegoose": "^9.7.1",
     "@types/bcrypt": "^5.0.0",
+    "@types/cors": "^2.8.12",
     "bcrypt": "^5.0.1",
     "class-transformer": "^0.5.1",
     "class-validator": "^0.13.2",
+    "cors": "^2.8.5",
     "dotenv": "^16.0.0",
     "express": "^4.17.3",
     "jsonwebtoken": "^8.5.1",
