package.json updated

--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
     "start": "node dist/app.js",
     "test": "echo \"Error: no test specified\" && exit 1",
     "watch": "nodemon app.ts",
-    "build": "node_modules/.bin/tsc"
+    "build": "node_modules/.bin/tsc",
+    "deploy": "scp -r dist package.json .env root@135.181.200.92:/root/wordsite"
   },
   "author": "",
   "license": "ISC",
