--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "@types/cors": "^2.8.12",
     "@types/node-cron": "^3.0.1",
     "@types/passport-google-oauth20": "^2.0.11",
+    "axios": "^0.26.1",
     "bcrypt": "^5.0.1",
     "class-transformer": "^0.5.1",
     "class-validator": "^0.13.2",
