--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "typescript": "^4.6.3"
   },
   "dependencies": {
+    "@sendgrid/mail": "^7.6.2",
     "@typegoose/typegoose": "^9.7.1",
     "@types/bcrypt": "^5.0.0",
     "@types/cors": "^2.8.12",
